@@ -1,3 +1,8 @@
+2007-10-26  Dan Williams  <dcbw@redhat.com>
+
+	* (clear_vpn_details_widget, vpn_druid_vpn_type_page_next, edit_cb): use
+		gtk_container_add/gtk_container_remove instead of reparenting widget
+
 2007-10-25  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
